--- a/LibraryManagment/appsettings.json
+++ b/LibraryManagment/appsettings.json
@@ -2,10 +2,15 @@
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   },
-  "ConnectionStrings": {
-    "LibraryDBContext": "Server=Powells-db\\Genacis2016;database=LibraryManagment;User ID=genacis;Pwd=genacis;pooling=true;Max Pool Size=100;MultipleActiveResultSets=true"
+    "AppSettings": {
+      "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+    },
+    "ConnectionStrings": {
+      "LibraryDBContext": "Server=Powells-db\\Genacis2016;database=LibraryManagment;User ID=genacis;Pwd=genacis;pooling=true;Max Pool Size=100;MultipleActiveResultSets=true"
+    }
   }
-}
